--- a/services/requirements.txt
+++ b/services/requirements.txt
@@ -5,4 +5,12 @@ beautifulsoup4==4.12.3
 lxml==5.3.0
 readability-lxml==0.8.1
 crawl4ai==0.7.6
-playwright==1.47.0
+playwright==fastapi==0.115.0
+uvicorn==0.30.6
+httpx==0.27.2
+beautifulsoup4==4.12.3
+lxml==5.3.0
+readability-lxml==0.8.1
+crawl4ai==0.7.6
+playwright==1.49.1
+
